src/test/ui/rfc-2093-infer-outlives/nested-union.stderr
error: rustc_outlives
  --> $DIR/nested-union.rs:16:1
   |
LL | / union Foo<'a, T> { //~ ERROR 16:1: 18:2: rustc_outlives
LL | |     field1: Bar<'a, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

